--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -392,7 +392,7 @@
                                     <div class="d-flex justify-content-between flex-lg-wrap btn-div">
                                         {% if flagLog %}
                                         <form method="post">
-                                            <button onclick="cambioBottone(event, this, fav_{{elem.code}})" id="fav_{{elem.code}}" class="{% if elem.code in utente.products_favorites %}btn-secondary{% else %} fav-btn {% endif %}
+                                            <button onclick="cambioBottone(event, this, fav_{{elem.code}})" id="fav_{{elem.code}}" class="{% if elem.code in utente.products_favorites %} bg-verde-scuro {% endif %}
                                                 btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2"
                                                     name="fav"
                                                     value="{{elem.code}}" type="submit">
@@ -513,7 +513,7 @@
                             <div class="d-flex  flex-lg-wrap">
                                 {% if flagLog %}
                                         <form method="post">
-                                            <button onclick="cambioBottone(event, this, fav_{{elem.code}})" id="fav_{{elem.code}}" class="{% if elem.code in utente.products_favorites %}btn-secondary{% else %} fav-btn {% endif %}
+                                            <button onclick="cambioBottone(event, this, fav_{{elem.code}})" id="fav_{{elem.code}}" class="{% if elem.code in utente.products_favorites %} bg-verde-scuro {% endif %}
                                                 btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2"
                                                     name="fav"
                                                     value="{{elem.code}}" type="submit">
@@ -646,8 +646,8 @@
                                     <div class="d-flex justify-content-between flex-lg-wrap">
                                         {% if flagLog %}
                                         <form method="post">
-                                            <button onclick="cambioBottone(event, this, fav_{{elem.code}})" id="fav_{{elem.code}}" class="{% if elem.code in utente.products_favorites %}btn-secondary{% else %} fav-btn {% endif %}
-                                                btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2"
+                                            <button onclick="cambioBottone(event, this, fav_{{elem.code}})" id="fav_{{elem.code}}" class="{% if elem.code in utente.products_favorites %} bg-verde-scuro {% endif %}
+                                                btn border border-secondary rounded-pill px-3 text-primary mx-2 my-2"
                                                     name="fav"
                                                     value="{{elem.code}}" type="submit">
                                                 <i class="fa fa-heart me-2 text-secondary"></i></button>
