--- a/test/templates/ricette.html
+++ b/test/templates/ricette.html
@@ -288,12 +288,12 @@
 <!-- Footer End -->
 
 <!-- Back to Top -->
-<div class="row">
-    <div class="col">
-        <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i
-                class="fa fa-arrow-up"></i></a>
-    </div>
-</div>
+<!--<div class="row">-->
+<!--    <div class="col">-->
+<!--        <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i-->
+<!--                class="fa fa-arrow-up"></i></a>-->
+<!--    </div>-->
+<!--</div>-->
 
 
 
