--- a/webapp/templates/ricette.html
+++ b/webapp/templates/ricette.html
@@ -246,7 +246,7 @@
 
 
 <!-- Footer Start -->
-<div class="container-fluid bg-verde-scuro text-white-50 footer mt-1">
+<div class="container-fluid bg-verde-scuro text-white-50 sticky footer mt-1">
     <div class="container">
         <div class="pb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
             <div class="row g-4">
@@ -280,22 +280,10 @@
                     Crivella </a>-
                 <a class="text-light text-decoration-underline"
                    href="//www.linkedin.com/in/riccardo-benedetti-44aa70299/"> Riccardo Benedetti </a>
-
-
         </div>
     </div>
 </div>
 <!-- Footer End -->
-
-<!-- Back to Top -->
-<div class="row">
-    <div class="col">
-        <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i
-                class="fa fa-arrow-up"></i></a>
-    </div>
-</div>
-
-
 
 <!-- JavaScript Libraries -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
