--- a/webapp/templates/profilo.html
+++ b/webapp/templates/profilo.html
@@ -371,11 +371,9 @@
                                 <div class="accordion-body">
                                     <ul class="list-group">
                                         {% for elem in categorie %}
-                                        <li class="list-group-item"><label><input type="checkbox"
-                                                                                  name="categoria{{loop.index}}_profilo"
-                                                                                  value="{{elem}}"> {% if elem in
-                                                                                  utente.Favorites %} checked {% endif
-                                                                                  %}>{{elem}}</label></li>
+                                        <li class="list-group-item"><label>
+                                            <input type="checkbox" name="categoria{{loop.index}}_profilo" value="{{elem}}"
+                                                {% if elem in utente.Favorites %} checked {% endif %}> {{elem}}</label></li>
                                         {% endfor %}
                                     </ul>
                                 </div>
