--- a/webapp/templates/ricette.html
+++ b/webapp/templates/ricette.html
@@ -246,7 +246,7 @@
 
 
 <!-- Footer Start -->
-<div class="container-fluid bg-verde-scuro text-white-50 sticky footer mt-1">
+<div class="container-fluid bg-verde-scuro text-white-50 sticky footer fixed-bottom mt-1 py-2">
     <div class="container">
         <div class="pb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
             <div class="row g-4">
