--- a/webapp/templates/login.html
+++ b/webapp/templates/login.html
@@ -100,7 +100,7 @@
 
     <div class="container px-0">
         <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
-            <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
+            <a href="/" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
             <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars text-primary"></span>
@@ -183,7 +183,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Cerrar"></button>
         </div>
         <div class="toast-body">
-            <h6>email o password sbagliato </h6>
+            <h6>Email o Password sbagliato </h6>
         </div>
     </div>
 </div>
@@ -212,7 +212,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Cerrar"></button>
         </div>
         <div class="toast-body">
-            <h6>Codice non trovato sulla imagine </h6>
+            <h6>Codice non trovato sulla immagine </h6>
         </div>
     </div>
 </div>
